--- a/todo/index.html
+++ b/todo/index.html
@@ -21,6 +21,22 @@
         
         <ul class="todo-list">
         </ul>
+        <div class="counters">
+            <div class="all">
+                <div class="label">Total: </div>
+                <span id="counter-total"></span>
+            </div>
+
+            <div class="finished">
+                <div class="label">Completos: </div>
+                <span id="counter-finished"></span>
+            </div>
+
+            <div class="pending">
+                <div class="label">Pendentes: </div>
+                <span id="counter-pending"></span>
+            </div>
+        </div>
     </div>
 
     <script src="js/scripts.js"></script>
