adicionados filtros de lista por status

--- a/todo/index.html
+++ b/todo/index.html
@@ -37,6 +37,13 @@
                 <span id="counter-pending"></span>
             </div>
         </div>
+
+        <div class="filters">
+            <span>Filtrar por: </span>
+            <button onclick="filtrarPor('todos')">Todos</button>
+            <button onclick="filtrarPor('completos')">Completos</button>
+            <button onclick="filtrarPor('pendentes')">Pendentes</button>
+        </div>
     </div>
 
     <script src="js/scripts.js"></script>
