--- a/todo/index.html
+++ b/todo/index.html
@@ -11,38 +11,42 @@
 </head>
 
 <body>
-    <h1>Meu gerenciador de tarefas</h1>
+    <div class="container">
 
-    <div class="todo-app">
+        <h1>Meu gerenciador de tarefas</h1>
+        <br>
         <div class="todo-input">
-            <input autofocus type="text" id="nova-tarefa" onkeypress="pressionarTecla()">
+            <input autofocus type="text" id="nova-tarefa" onkeypress="pressionarTecla()" placeholder="Minha nova tarefa...">
             <button onclick="adicionarTarefa()">Adicionar</button>
         </div>
-        
-        <ul class="todo-list">
-        </ul>
-        <div class="counters">
-            <div class="all">
-                <div class="label">Total: </div>
-                <span id="counter-total"></span>
+
+        <div class="todo-app">
+            <ul class="todo-list">
+            </ul>
+
+            <div class="counters">
+                <div class="all">
+                    <div class="label">Total: </div>
+                    <span id="counter-total"></span>
+                </div>
+
+                <div class="finished">
+                    <div class="label">Completos: </div>
+                    <span id="counter-finished"></span>
+                </div>
+
+                <div class="pending">
+                    <div class="label">Pendentes: </div>
+                    <span id="counter-pending"></span>
+                </div>
             </div>
 
-            <div class="finished">
-                <div class="label">Completos: </div>
-                <span id="counter-finished"></span>
+            <div class="filters">
+                <span>Filtrar por: </span>
+                <button onclick="filtrarPor('todos')">Todos</button>
+                <button onclick="filtrarPor('completos')">Completos</button>
+                <button onclick="filtrarPor('pendentes')">Pendentes</button>
             </div>
-
-            <div class="pending">
-                <div class="label">Pendentes: </div>
-                <span id="counter-pending"></span>
-            </div>
-        </div>
-
-        <div class="filters">
-            <span>Filtrar por: </span>
-            <button onclick="filtrarPor('todos')">Todos</button>
-            <button onclick="filtrarPor('completos')">Completos</button>
-            <button onclick="filtrarPor('pendentes')">Pendentes</button>
         </div>
     </div>
 
