--- a/targetFlix/public/index.html
+++ b/targetFlix/public/index.html
@@ -15,13 +15,7 @@
         <header>
             <h1>Target Flix</h1>
         </header>
-        <main>
-            <section class="category">
-                <h1>Lançamentos</h1>
-                <div class="movies">
-                </div>
-            </section>
-        </main>
+        <main></main>
     </div>
     <script src="bundle.js"></script>
 </body>
