--- a/targetFlix/public/index.html
+++ b/targetFlix/public/index.html
@@ -16,6 +16,7 @@
             <h1>Target Flix</h1>
         </header>
         <main></main>
+        <aside id="movie-details"></aside>
     </div>
     <script src="bundle.js"></script>
 </body>
